--- a/src/app/orbit-list/orbit-list.component.css
+++ b/src/app/orbit-list/orbit-list.component.css
@@ -21,6 +21,10 @@ table {
 	color: #fff
 }
 
+tr:nth-child(even) {
+	background-color: #00FF00;
+}
+
 th, td {
 	text-align: left;
 	margin: 5px 10px;
